// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-semantic-nullability > explicit levels for lists > generates expected schema 1`] = `
"directive @semanticNonNull(levels: [Int!] = [0]) on FIELD_DEFINITION

type Query {
  bothLevels: [String]
  itemsOnly: [String]!
  listOnly: [String!]
}"
`;

exports[`plugin-semantic-nullability > list fields with true (level 0 only) > generates expected schema 1`] = `
"directive @semanticNonNull(levels: [Int!] = [0]) on FIELD_DEFINITION

type Query {
  nullableItems: [String]
  nullableList: [String!]
  tags: [String!]
}"
`;

exports[`plugin-semantic-nullability > per-field opt-in > generates expected schema 1`] = `
"directive @semanticNonNull(levels: [Int!] = [0]) on FIELD_DEFINITION

type Query {
  age: Int!
  bio: String
  name: String
}"
`;

exports[`plugin-semantic-nullability > schema-wide allNonNullFields > generates expected schema 1`] = `
"directive @semanticNonNull(levels: [Int!] = [0]) on FIELD_DEFINITION

type Query {
  age: Int!
  bio: String
  name: String
  tags: [String!]
}"
`;
